<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="18dp"
    android:layout_height="match_parent"
    tools:context=".SelectEducationActivity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_education"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/select_education_question"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <RadioGroup
        android:id="@+id/radioGroupEducation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

        <RadioButton
            android:id="@+id/radioButtonBelow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/below_high_school" />

        <RadioButton
            android:id="@+id/radioButtonHigh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/high_school" />

        <RadioButton
            android:id="@+id/radioButtonBachelors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bachelors" />

        <RadioButton
            android:id="@+id/radioButtonMasters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masters" />

        <RadioButton
            android:id="@+id/radioButtonPHD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phd" />

        <RadioButton
            android:id="@+id/radioButtonTrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trade" />

        <RadioButton
            android:id="@+id/radioButtonEducationPreferNot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prefer_not" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonEducationCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/space"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonEducationSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/space" />

    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>